--- a/StavvyBird/Info.plist
+++ b/StavvyBird/Info.plist
@@ -26,6 +26,8 @@
 	<string>1</string>
 	<key>GADApplicationIdentifier</key>
 	<string>ca-app-pub-5440760624380114~2868255850</string>
+	<key>GameKit</key>
+	<string></string>
 	<key>GCSupportsControllerUserInteraction</key>
 	<true/>
 	<key>LSRequiresIPhoneOS</key>
