--- a/StavvyBird/Info.plist
+++ b/StavvyBird/Info.plist
@@ -26,10 +26,10 @@
 	<string>1</string>
 	<key>GADApplicationIdentifier</key>
 	<string>ca-app-pub-5440760624380114~2868255850</string>
-	<key>GameKit</key>
-	<string></string>
 	<key>GCSupportsControllerUserInteraction</key>
 	<true/>
+	<key>GameKit</key>
+	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>SKAdNetworkItems</key>
@@ -236,7 +236,10 @@
 		<string>Pixel Digivolve.otf</string>
 	</array>
 	<key>UIBackgroundModes</key>
-	<array/>
+	<array>
+		<string>fetch</string>
+		<string>processing</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
