--- a/StavvyBird/Info.plist
+++ b/StavvyBird/Info.plist
@@ -236,10 +236,7 @@
 		<string>Pixel Digivolve.otf</string>
 	</array>
 	<key>UIBackgroundModes</key>
-	<array>
-		<string>fetch</string>
-		<string>processing</string>
-	</array>
+	<array/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
