--- a/StavvyBird/Info.plist
+++ b/StavvyBird/Info.plist
@@ -234,9 +234,9 @@
 	<key>UIBackgroundModes</key>
 	<array/>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>SplashBoard</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
+	<string>GamePlay</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
