button node stuff checkpoint

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ## OS X Finder
 .DS_Store
 
-## Build generated
+## Build generated weeeee
 build/
 DerivedData
 
@@ -16,7 +16,7 @@ DerivedData
 !default.perspectivev3
 xcuserdata
 
-## Other
+## Other weeeeee
 
 *.xccheckout
 *.moved-aside
